# ros2-hand-teleop

./: README.md  hand_cam_config.rviz  my_world.sdf  notes.md  progress.md  requirements.txt  utils.py
datasets/: convert_ros_recordings_to_lerobot.py  smolvla_single_step_smoke.py  test_smolvla_single_step_smoke.py
hand_publisher/: package.xml  setup.py
hand_publisher/config/: gazebo.yaml  panda_controllers.yaml  panda_description.yaml
hand_publisher/hand_publisher_node/: config.py  controller_node.py  gripper_publisher.py  hand_frame_node.py  hand_image_node.py  hand_points_node.py  hand_publisher_node.py  hand_utils.py  joint_state_merger.py  mic_trigger_node.py  pose_recorder_node.py  sdf_obstacle_publisher.py  smolvla_control_node.py  smolvla_node.py  utils.py
hand_publisher/launch/: gazebo.launch.py  hand_publisher_launch.py  hand_tracking_nodes.launch.py  moveit_control.launch.py  obstacle_scene_test.launch.py  panda_bringup.launch.py  panda_description.launch.py  panda_gazebo.launch.py  panda_hand_tracking.launch.py  panda_hand_tracking_plan_teleop.launch.py  panda_hand_tracking_trac_ik_recording.launch.py  panda_hand_tracking_trac_ik_teleop.launch.py  panda_smolvla.launch.py  panda_trac_ik_teleop.launch.py  plan_controller_nodes.launch.py  trac_ik_controller_nodes.launch.py
hand_publisher/test/: test_moveit_control_launch.py  test_smolvla_node.py
hand_publisher/urdf/urdf/: panda.gz.urdf.xacro  panda.urdf  panda.urdf.xacro
hand_publisher/worlds/: my_world.sdf
hand_publisher_interfaces/: CMakeLists.txt
hand_publisher_interfaces/msg/: Obstacle.msg  __init__.py
hand_publisher_interfaces/srv/: AddObject.srv  SmolVLAInference.srv  SolveIK.srv
ik_node/: CMakeLists.txt  package.xml
ik_node/src/: cpp_heartbeat_node.cpp  dual_finger_ik_node.cpp  obstacle_scene_node.cpp  plan_node.cpp  trac_ik_node.cpp
