<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ik_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="j.hartvich@gmail.com">hartvi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>tf2_ros</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hand_publisher_interfaces</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>shape_msgs</depend>
  <depend>trac_ik_lib</depend>
  <depend>orocos_kdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
